api updates for 2019 LTS
git-svn-id: https://server.mycore.de/svn/jspdocportal/trunk@38064 7089d063-bc14-496d-ac90-53de1872eb6c